@@ -1,3 +1,0 @@
-ifeq ($(subdir),math)
-CPPFLAGS += -I../soft-fp
-endif
